Fixed z-index css bug

--- a/src/app/modules/cms/digenes/components/root/root.component.scss
+++ b/src/app/modules/cms/digenes/components/root/root.component.scss
@@ -41,7 +41,7 @@
   text-transform: uppercase;
   text-align: center;
   background-color: rgba(0,0,0,$transparency);
-  z-index: 100;
+  z-index: 10;
 }
 
 @media (max-width: 640px) {
